Bug: 832939 Reviewer: Jay Wootton Comment: In the Share dialog, don't let a long path name overflow the dialog.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -700,6 +700,9 @@
 	font-size: 13px;
 	line-height: 16px;
 	margin-top: 3px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .shareThisDlg_NoteLabel
